SSS + volume rendering error #39823

Closed
opened 2014-04-21 10:08:08 +02:00 by gandalf3 · 12 comments
Member

System Information
Archlinux
Nvidia GTX 460

Blender Version
Broken: 0ed6725

Short description of error
Light emitted from volume/smoke emission does not travel inside materials with SSS though the smoke domain.

Exact steps for others to reproduce the error
Based on cycles_fire_SSS.blend

  1. Open attached .blend
  2. Play the animation up to about frame 60 (to simulate the fire up to a good point)
  3. Look at the Sphere object with the rendered viewport. The SSS will have a sharp falloff at the border of the smoke domain.
**System Information** Archlinux Nvidia GTX 460 **Blender Version** Broken: 0ed6725 **Short description of error** Light emitted from volume/smoke emission does not travel inside materials with SSS though the smoke domain. **Exact steps for others to reproduce the error** Based on [cycles_fire_SSS.blend](https://archive.blender.org/developer/F85501/cycles_fire_SSS.blend) 1. Open attached .blend 2. Play the animation up to about frame 60 (to simulate the fire up to a good point) 3. Look at the `Sphere` object with the rendered viewport. The SSS will have a sharp falloff at the border of the smoke domain.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Author
Member

Sorry about the poor title. I meant to say something like "Light emitted from fire does not scatter though the domain boundary", however the "Edit Task" button is disabled..

Sorry about the poor title. I meant to say something like "Light emitted from fire does not scatter though the domain boundary", however the "Edit Task" button is disabled..
Brecht Van Lommel was assigned by Sergey Sharybin 2014-04-28 10:15:24 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey
Brecht Van Lommel changed title from volume/smoke emission will not be scattered outside the viewport to SSS + volume rendering error 2014-05-05 16:02:39 +02:00

Added subscriber: @underhood

Added subscriber: @underhood
Brecht Van Lommel was unassigned by Thomas Dinges 2014-09-03 00:46:02 +02:00
Sergey Sharybin was assigned by Thomas Dinges 2014-09-03 00:46:02 +02:00

Added subscribers: @brecht, @ThomasDinges

Added subscribers: @brecht, @ThomasDinges

Sergey, maybe you have an idea?
This does not happen with a Diffuse shader, or a generic Volume Emission object, so it looks like directly related to the Domain.

Sergey, maybe you have an idea? This does not happen with a Diffuse shader, or a generic Volume Emission object, so it looks like directly related to the Domain.

When SSS sampling is used to jump from one point on the surface to another, the volume stack is not updated. So if in jumping to another point on the surface a volume was entered or exited, that is not recorded properly.

It is possible to trace a ray between the original shading point and the SSS sampled shading point, and adjust the volume stack as needed (see e.g. the shadow tracing code for how to record the hits along a ray and loop over them updating the volume stack).

The problem is that this is going to introduce a slowdown. It's possible to skip this if there are no volumes at all in the scene of course.

When SSS sampling is used to jump from one point on the surface to another, the volume stack is not updated. So if in jumping to another point on the surface a volume was entered or exited, that is not recorded properly. It is possible to trace a ray between the original shading point and the SSS sampled shading point, and adjust the volume stack as needed (see e.g. the shadow tracing code for how to record the hits along a ray and loop over them updating the volume stack). The problem is that this is going to introduce a slowdown. It's possible to skip this if there are no volumes at all in the scene of course.

Created a patch for this issue D795.

Created a patch for this issue [D795](https://archive.blender.org/developer/D795).

This issue was referenced by ccc5983e2b

This issue was referenced by ccc5983e2bb87bde7b2895da6bea3fd129968aeb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ccc5983e2b.

Closed by commit ccc5983e2b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39823
No description provided.